--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 <title>hello</title>
 </head>
 <body>
-hi there! i am the king my name is shubham raj
+hi there! my name is shubham raj
 </body>
 </html>
