--- a/module-2sol/index.html
+++ b/module-2sol/index.html
@@ -13,7 +13,7 @@
 <h1>our menu </h1>
 
 <div class="row">
-<div class="s1 col-lg-3" >
+<div class="s1 col-lg-4 col-md-6" >
 <p class="t1">
 	chicken
 </p>
@@ -26,7 +26,7 @@
 
 
 
-<div class="s2 col-lg-3">
+<div class="s2 col-lg-4 col-md-6">
 <p class="t2">
 	beef
 </p>
@@ -38,7 +38,7 @@
 
 
 </div>
-<div class="s3 col-lg-3">
+<div class="s3 col-lg-4 col-md-12" id="hello">
 <p class="t3">
 	sushi
 </p>
